[package]
name = "mine-proxy"
version = "0.1.0"
authors = ["Luiz Carlos Mourão Paes de Carvalho <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { git = "https://github.com/SaiintBrisson/rsms-protocol", branch = "main" }

async-trait = "0.1.48"
byteorder = "1.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.8.3"

[dependencies.tokio]
version = "1.4.0"
features = ["net", "io-util", "macros", "rt-multi-thread"]
